Fixed a bug about the lower() and added money checker function

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Day 14 - Higher Lower Game Project/Test.ipynb
 Day 14 - Higher Lower Game Project/Test1.ipynb
+Day 15 - Local Development Environment Setup & the Coffee Machine/tets.ipynb
